fix horizontal scroll bug by setting .row padding/margin to 0; clean up style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,11 @@ body {
     font-size: small;
 }
 
+.row {
+    padding: 0px;
+    margin: 0px;
+}
+
 h1,
 h2 {
     text-transform: uppercase;
@@ -33,11 +38,11 @@ hr {
     width: 100%;
 }
 
-.full-width {
+/* .full-width {
     width: 100vw;
     position: relative;
     left: 0;
-}
+} */
 
 /* MAIN CONTAINER */
 
@@ -46,13 +51,7 @@ hr {
     width: 100vw;
 }
 
-html body div section div div.col
-
 /* HEADER */
-
-.header {
-
-}
 
 .navbar {
     padding: 40px 20px;
@@ -77,9 +76,6 @@ html body div section div div.col
     transform: scaleX(-1);
 }
 
-.button-nav {
-padding
-}
 
 /* TITLE & INTRO */
 
@@ -131,10 +127,6 @@ padding
     border-radius: 0px;
 }
 
-.card-body p {
-    /* margin: 15px 0px 0px 0px; */
-}
-
 .btn-info {
     text-transform: uppercase;
     width: 100%;
@@ -158,12 +150,6 @@ padding
 .btn-dark:hover {
     background-color: black;
 }
-
-.btn-info:hover {
-    /* background-color: lightgray;
-    color: black; */
-}
-
 
 /* GUIDE PAGE */
 
